# strapi-template-new-world-kids

./: .env.example  .env.local.example  .env.production.example  .gitignore  .gitmodules  .jcodemunch.jsonc  .lintstagedrc.js  .mcp.json  .vercelignore  AGENTS.md  AGENT_UI_STACK.md  BROWSER_CONTROL.md  BUILD_INTEGRATION_COMPLETE.md  CLAUDE.md  CODEX_FINAL_PROMPT.md  CODEX_PROMPT.md  CONTENT_INDEX.md  COOLIFY_DEPLOYMENT_GUIDE.md  DEPLOYMENT_AUDIT_REPORT.md  DEPLOYMENT_EXECUTION_PROGRESS.md  DEPLOYMENT_EXECUTION_SUMMARY.md  DEPLOYMENT_INTEGRATION_COMPLETE.md  DEPLOYMENT_ORCHESTRATION.md  DEPLOYMENT_READY_FINAL.md  DEPLOYMENT_STATUS_LIVE.md  DESIGN_AUDIT.md  ENV_README.md  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_METRICS_REPORT.md  GHOST_IMPLEMENTATION_STATUS.md  GHOST_INTEGRATION_SUMMARY.md  GHOST_MIGRATION_PLAN.md  HANDOFF_2026-05-15.md  IMPLEMENTATION_COMPLETE.md  INCIDENT_RESPONSE.md  KPI.md  LLM.txt  MESSAGE_TO_CLAUDE_CODE.md  P2TLOaiuySuAW1kXCLsbsiULBYCNMnuH4Ju.txt  (+41 more)
services/synthia-gateway/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  coolify.env  nixpacks.toml  package-lock.json  package.json
services/synthia-gateway/migrations/: 001_init.sql
services/synthia-gateway/src/: app.js  config.rs  error.rs  index.js  main.rs  providers.js  state.rs
services/synthia-gateway/src/adapters/: anthropic.js
services/synthia-gateway/src/middleware/: auth.js  auth.rs  mod.rs  spend.rs
services/synthia-gateway/src/providers/: anthropic.rs  gemini.rs  (+8 more)
services/synthia-gateway/tests/: anthropic.test.js  app.test.js  providers.test.js
(+700 files in other folders)
